--- a/Parrallax/ParallaxSpace/index.html
+++ b/Parrallax/ParallaxSpace/index.html
@@ -4,26 +4,26 @@
 	<meta charset="utf-8">
 	<title>Parallax.js</title>
 	<link rel="stylesheet" href="style.css">
-	<script src="/parallax.js"></script>
+	<script src="parallax.js"></script>
 </head>
 <body>
-	<img src="background.jpg" alt="">
+	<img src="images/background.jpg">
 	<div class="container">
 		<ul id="scene">
 			<li class="layer" data-depth=".1">
-				<img src="text.png">
+				<img src="images/text.png" alt="text image">
 			</li>
 			<li class="layer" data-depth="1">
-				<img src="planet1.png">
+				<img src="images/planet1.png" alt="planet1 image">
 			</li>
 			<li class="layer" data-depth="-1">
-				<img src="planet2.png">
+				<img src="images/planet2.png" alt="planet2 image">
 			</li>
 			<li class="layer" data-depth="2">
-				<img src="astronaut.png">
+				<img src="images/astronaut.png" alt="ilon mask image">
 			</li>
 			<li class="layer" data-depth="0.5">
-				<img src="rocket.png">
+				<img src="images/rocket.png" alt="SpaceX rocket image">
 			</li>
 		</ul>
 	</div>
