--- a/Parrallax/Parallax Moon Light/index.html
+++ b/Parrallax/Parallax Moon Light/index.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
     <title>Document</title>
 </head>
 <body>
     <section>
-        <img src="/img/bg.jpg" id="bg">
-        <img src="/img/moon.png" id="moon">
-        <img src="/img/mountain.png" id="mountain">
-        <img src="/img/road.png" id="road">
+        <img src="img/bg.jpg" id="bg">
+        <img src="img/moon.png" id="moon">
+        <img src="img/mountain.png" id="mountain">
+        <img src="img/road.png" id="road">
         <h2 id="text">Moon Light</h2>
     </section>
     <script>
