--- a/Parrallax/Parallax Moon Light/index.html
+++ b/Parrallax/Parallax Moon Light/index.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
-    <title>Document</title>
+    <!-- <title>Parrallax Moon</title> -->
+    <title>Parallax Moon</title>
+    <!-- <title>Parrallax Moon Light</title> -->
+    <!-- <title>Parralax Moon</title> -->
+    <!-- <title>Parralax Moon Light</title> -->
+    <!-- <title>Parallax Moon Light</title> -->
 </head>
 <body>
     <section>
