add js script in Moon Light
parallaxEffectMoonLight.js

--- a/Parrallax/Parallax Moon Light/index.html
+++ b/Parrallax/Parallax Moon Light/index.html
@@ -33,7 +33,10 @@
             mountain.style.top = value * 0.15 + 'px';
             road.style.top = value * 0.15 + 'px';
             text.style.top = value + 'px';
-        })
+        });
     </script>
+    <!-- <script src="parallaxEffectMoonLight.js">
+
+    </script> -->
 </body>
 </html>
