--- a/Parrallax/Parallax Moon Light/index.html
+++ b/Parrallax/Parallax Moon Light/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="icon" href="img/logosite_moon.jpg">
     <!-- <title>Parrallax Moon</title> -->
     <title>Parallax Moon</title>
     <!-- <title>Parrallax Moon Light</title> -->
