--- a/Parrallax/Parallax Space/index.html
+++ b/Parrallax/Parallax Space/index.html
@@ -2,8 +2,12 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Parallax.js</title>
+	<title>Parallax Space</title>
+	<!-- <title>Parallax Effect</title> -->
+	<!-- <title>Parralax Effect</title> -->
+	<!-- <title>Parrallax Effect</title> -->
 	<link rel="stylesheet" href="style.css">
+	<link rel="icon" href="images/logosite.png">
 	<script src="parallax.js"></script>
 </head>
 <body>
