fix tittle main site

--- a/Parrallax/index.html
+++ b/Parrallax/index.html
@@ -6,7 +6,7 @@
     <!-- <title>Parrallax</title> -->
     <!-- <title>Parralax</title> -->
     <!-- <title>Paralax</title> -->
-    <title>Parrallax effects | Space & Moon</title>
+    <title>Parrallax effects | Space & Moon Light</title>
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
