--- a/Parrallax/sites/Parallax-Moon-Light/index.html
+++ b/Parrallax/sites/Parallax-Moon-Light/index.html
@@ -20,15 +20,38 @@
         <img src="img/road.png" id="road">
         <h2 id="text">Moon Light</h2>
     </section>
+    <footer>
+        <h2 class="footerTittle" id="footer-tittle">Thanks for Watching</h2>
+        <a href="https://github.com/VladimirSaenko">
+        <img id="gitImg" class="git-img" src="img/git-img.jpg">
+        </a>
+    </footer>
     <script>
         let bg = document.getElementById("bg");
         let moon = document.getElementById("moon");
         let mountain = document.getElementById("mountain");
         let road = document.getElementById("road");
         let text = document.getElementById("text");
+        let tittleFooter = document.getElementById("footer-tittle");
+        let gitimgLink = document.getElementById("gitImg");
+        let isTFvis = false;
+
+        window.addEventListener('scroll', function() {
+            tittleFooter.style.transition = '3.5s';
+            tittleFooter.style.transform = 'translateX(-0%)';
+            isTFvis = true;
+            function visGitImg() {
+            gitimgLink.style.transition = '3.5';
+            gitimgLink.style.visibility = 'visible';
+            gitimgLink.style.transform = 'translateX(240%)';
+            } 
+            if(isTFvis == true) {
+            setTimeout(visGitImg,3500);
+        }
+        })
 
         window.addEventListener('scroll',function() {
-            var value = window.scrollY;
+            let value = window.scrollY;
             bg.style.top = value * 0.5 + 'px';
             moon.style.left = value * 0.5 + 'px';
             mountain.style.top = value * 0.15 + 'px';
