--- a/Parrallax/sites/Parallax-Moon-Light/index.html
+++ b/Parrallax/sites/Parallax-Moon-Light/index.html
@@ -48,7 +48,7 @@
             if(isTFvis == true) {
             setTimeout(visGitImg,3500);
         }
-        })
+        });
 
         window.addEventListener('scroll',function() {
             let value = window.scrollY;
@@ -62,5 +62,6 @@
     <!-- <script src="parallaxEffectMoonLight.js">
 
     </script> -->
+    <!-- <script src="/Parrallax/sites/Parallax-Moon-Light/hiddenThanksScript.js"></script> -->
 </body>
 </html>
