--- a/Parrallax/sites/Parallax-Moon-Light/index.html
+++ b/Parrallax/sites/Parallax-Moon-Light/index.html
@@ -41,7 +41,7 @@
             tittleFooter.style.transform = 'translateX(-0%)';
             isTFvis = true;
             function visGitImg() {
-            gitimgLink.style.transition = '3.5';
+            gitimgLink.style.transition = '2.5s';
             gitimgLink.style.visibility = 'visible';
             gitimgLink.style.transform = 'translateX(240%)';
             } 
