--- a/index.html
+++ b/index.html
@@ -5,19 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Parrallax effects | Space & Moon Light</title>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="icon" href="/Parrallax/img/portfolio-icon.png">
+    <!-- <link rel="icon" href="#"> -->
 </head>
 <body>
     <ul class="list">
         <li><div id="side-1" onmouseover="changeItem1()" onmouseout="rechangeItem1()" class="right-side">
-            <a href="/Parrallax/sites/Parallax-Space/index.html">
+            <a href="sites/Parallax-Space/index.html">
             <img class="space-text" src="img/space-text.png">
             </a>
         </div>
         </li>
         <li>
             <div id="side-2" onmouseover="changeItem2()" onmouseout="rechangeItem2()" class="left-side">
-                <a href="/Parrallax/sites/Parallax-Moon-Light/index.html">
+                <a href="sites/Parallax-Moon-Light/index.html">
                 <h2 class="moonlight-text">Moon Light</h2>
                 </a>
             </div>
