del js script & rename icon & add new icon in mainsite

--- a/sites/Parallax-Space/index.html
+++ b/sites/Parallax-Space/index.html
@@ -2,12 +2,9 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Parallax Space</title>
-	<!-- <title>Parallax Effect</title> -->
-	<!-- <title>Parralax Effect</title> -->
-	<!-- <title>Parrallax Effect</title> -->
+	<title>Parrallax Space</title>
 	<link rel="stylesheet" href="style.css">
-	<link rel="icon" href="images/logosite.png">
+	<link rel="icon" href="images/icon.png">
 	<script src="parallax.js"></script>
 </head>
 <body>
