--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Parrallax effects | Space & Moon Light</title>
     <link rel="stylesheet" href="css/style.css">
-    <!-- <link rel="icon" href="#"> -->
+    <link rel="icon" href="img/icon.png">
 </head>
 <body>
     <ul class="list">
