--- a/sites/Parallax-Moon-Light/index.html
+++ b/sites/Parallax-Moon-Light/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="icon" href="img/icon.jpg">
+    <link rel="icon" href="img/icon.png">
     <title>Parrallax Moon Light</title>
 </head>
 <body>
