--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <ul class="list">
         <li><div id="side-1" onmouseover="changeItem1()" onmouseout="rechangeItem1()" class="right-side">
             <a href="sites/Parallax-Space/index.html">
-            <img class="space-text" src="img/space-text.png">
+            <img class="space-text" src="img/space-text.png" alt="space-text">
             </a>
         </div>
         </li>
