--- a/sites/Parallax-Moon-Light/index.html
+++ b/sites/Parallax-Moon-Light/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Parallax Moon Light</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="img/icon.png">
-    <title>Parrallax Moon Light</title>
 </head>
 <body>
     <section>
@@ -31,5 +32,6 @@
             text.style.top = value + 'px';
         })
     </script>
+    <!-- <script src="scripts/parallaxEffectMoonLight.js"></script> -->
 </body>
 </html>
