--- a/sites/Parallax-Space/index.html
+++ b/sites/Parallax-Space/index.html
@@ -1,8 +1,10 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-	<meta charset="utf-8">
-	<title>Parrallax Space</title>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Parallax Space</title>
 	<link rel="stylesheet" href="style.css">
 	<link rel="icon" href="images/icon.png">
 	<script src="parallax.js"></script>
@@ -24,13 +26,13 @@
 				<img src="images/astronaut.png" alt="ilon mask image">
 			</li>
 			<li class="layer" data-depth="0.5">
-				<img src="images/rocket.png" alt="SpaceX rocket image">
+				<img src="images/rocket.png" alt="rocket image">
 			</li>
 		</ul>
 	</div>
-	<script>
-		var scene = document.getElementById('scene');
-		var parallax = new Parallax(scene);
-	</script>
+<script>
+	var scene = document.getElementById('scene');
+	var parallax = new Parallax(scene);
+</script>
 </body>
 </html>
