--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Parallax effect | Space & Moon Light</title>
     <!-- <title>Parallax effects | Space & Moon Light</title> -->
     <link rel="stylesheet" href="css/style.css">
-    <link rel="icon" href="img/icon.png">
+    <link rel="icon" href="images/icon.png">
 </head>
 <body>
     <div class="container">
