--- a/sites/Parallax-Moon-Light/index.html
+++ b/sites/Parallax-Moon-Light/index.html
@@ -10,17 +10,19 @@
 </head>
 <body>
     <section>
-        <img src="img/bg.jpg" id="bg">
-        <img src="img/moon.png" id="moon">
-        <img src="img/mountain.png" id="mountain">
-        <img src="img/road.png" id="road">
+        <img src="img/bg.jpg" id="bg" alt="bg">
+        <img src="img/moon.png" id="moon" alt="moon">
+        <img src="img/mountain.png" id="mountain" alt="mountain">
+        <img src="img/road.png" id="road" alt="road">
         <h2 id="text">Moon Light</h2>
     </section>
-    <button>
-        <a href="https://vladimirsaenko.github.io/Parallax-Moon-Light2/">
-            Next
-        </a>
-    </button>
+    <div class="second">
+        <button>
+            <a href="https://vladimirsaenko.github.io/Parallax-Moon-Light2/">
+                Next
+            </a>
+        </button>
+    </div>
     <script>
         let bg = document.getElementById("bg");
         let moon = document.getElementById("moon");
